--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,25 @@
   "description": "Filter Meetup Events (avoid events with only a few attendees)",
   "version": "1.0",
 
-  "browser_action": {
+    // "background": {
+    //   "scripts": ["popup.js"],
+    //   "persistent": false
+    // },
+
+    
+    "options_page": "options.html",
+
+
+    "browser_action": {
       "default_icon": "icon.png",
       "default_popup": "popup.html",
-      "default_title": "Click here!"
+      "default_title": "Filter Meetup Events"
     },
   
     "content_scripts": [
     {
       "matches": ["http://*/*","https://*/*"],
-      "js": ["jquery-3.2.0.min.js", "popup.js"  ]
+      "js": ["jquery-3.2.0.min.js", "popup.js", "content.js"  ]
     }
   ],
 
