--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
-    "default_title": "Filter Meetup Events"
+    "default_title": "Filters Meetup Events"
   },
   
     "content_scripts": [
